code cleaned